force-app/main/default/objects/Greenhouse_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Greenhouse_Object__c</fullName>
        <label>Greenhouse Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_Parent_Table__c</fullName>
        <label>Greenhouse Parent Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_Property__c</fullName>
        <label>Greenhouse Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Reference_Field__c</fullName>
        <label>Salesforce Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Rule__c</fullName>
        <label>Update Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Greenhouse Custom Mapping</label>
</CustomObject>